--- a/wp/wp-content/themes/icuinparis/style.css
+++ b/wp/wp-content/themes/icuinparis/style.css
@@ -47,11 +47,6 @@ body {
 #wrapper{
     margin-top: 0;
 }
-a{
-    color:#000000;
-}
-
-
 
 #main {
     width: 100% !important;
@@ -112,6 +107,10 @@ a{
 
 #footer {
     color: #d1d1d1;
+    text-align:center;
+    background-image: url('./img/bkgr_foot.jpg');
+    background-repeat: repeat-x;
+    background-color: rgba(0, 0, 0, 0.19);
 }
 
 .product{
@@ -122,8 +121,10 @@ a{
     display: block;
     text-transform: uppercase;
     line-height: 17px;
+
 }
 .product span{
+    color: white;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -144,14 +145,17 @@ a{
 #footer-widget-wrapper{
     background-color: #E6E6E6;
 }
-#footer-widgets {
-    background:#e6e6e6; 
-    border-top: 0px solid #848A92;
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) inset;
+#footer_widgets_header{
+    margin-bottom: 20px;
+    font-size: 1.2em;
+}
+#footer_widgets {
     color: #303030;
     padding: 5.874em 0 2.244em;
 }
-
+#footer_widgets a{
+    color: #303030;
+}
 section#footer-widgets div.col-full div.block div#text-5.widget {
     color:#303030; text-shadow:none;    
 }
@@ -165,7 +169,7 @@ section#footer-widgets div.col-full div.block div#text-8.widget {
     color:#303030; text-shadow:none;    
 }
 
-h2.home-footer { 
+h2.home-footer, #footer_widgets h2 { 
     color:#303030; 
     margin-bottom: 1px; 
     font-weight:normal;
@@ -173,9 +177,6 @@ h2.home-footer {
     font-size: 2.3em;
 }
 
-div.home-footer-header { 
-    text-shadow:none;
-}
 
 .entry img {
     margin-bottom: -1px;
@@ -430,58 +431,6 @@ html.js body.page div#wrapper.container div#content.page section#main.col-left a
     width: 76%;
 }
 
-.woocommerce-page #content #main{
-    margin: 40px 0% 0px 20%;
-    width:76% !important;
-    max-width:960px;
-}
-
-.woocommerce-page #content #main h1{
-    color:#000;
-    font-size:48px;
-    margin-bottom: 10px;
-}
-
-/* HIDE THE ADD TO CART BUTTONS*/
-.woocommerce-page #content #main .add_to_cart_button, .woocommerce-page #content #main .product .cart{
-    display:none;
-}
-
-.woocommerce-page #content #sidebar{
-    float:left;
-    color:#000;
-    margin-top: 0;
-    width: 21%;
-    position: absolute;
-    top: 150px;
-    left: 10%;
-}
-
-.woocommerce-page #content #sidebar .widget *{
-    color:#000;
-}
-
-ul.products .product {
-    width: 200px;
-    margin-right: 15px;
-}
-
-ul.products .product:nth-child(2n) {
-    margin-right: 15px;
-}
-
-.woocommerce-page #content #main .product h1.product_title{
-    font-size:24px;
-}
-
-.woocommerce-page #content #main .product .summary span{
-    color:#000;
-}
-
-.woocommerce-page #content #main .product .product_meta *{
-    color:#000;
-}
-
 article {
     overflow: hidden;
 }
@@ -497,6 +446,13 @@ article {
     padding-bottom: 10px;
     font-size: 1.6em;
     text-align: center;
+}
+
+footer a{
+    color: white;
+}
+footer a:hover{
+    color: #D1D1D1;
 }
 /*****************************************************************************
 /*****************************************************************************
@@ -586,9 +542,6 @@ article {
 
 /*box styles*/
 
-a{
-	color:#ffffff;
-}
 
 /*style 1*/
 .useful_box1{
