--- a/wp/wp-content/themes/icuinparis/style.css
+++ b/wp/wp-content/themes/icuinparis/style.css
@@ -37,7 +37,7 @@ body {
   line-height: 1.618;
   color: #666;
   background: #ffffff;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Gotham-Light', sans-serif;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
@@ -48,11 +48,8 @@ body {
     margin-top: 0;
 }
 
-#main {
-    width: 100% !important;
-}
 #content{
-    padding-top: 130px;
+    /*padding-top: 130px;*/
 }
 .flexslider-container{
     display: none;
@@ -151,24 +148,14 @@ body {
 }
 #footer_widgets {
     color: #303030;
-    padding: 5.874em 0 2.244em;
+    padding: 50px 0;
 }
 #footer_widgets a{
     color: #303030;
 }
-section#footer-widgets div.col-full div.block div#text-5.widget {
-    color:#303030; text-shadow:none;    
+.widget{
+    padding-bottom: 15px;
 }
-section#footer-widgets div.col-full div.block div#text-6.widget {
-    color:#303030; text-shadow:none;    
-}
-section#footer-widgets div.col-full div.block div#text-7.widget {
-    color:#303030; text-shadow:none;    
-}
-section#footer-widgets div.col-full div.block div#text-8.widget {
-    color:#303030; text-shadow:none;    
-}
-
 h2.home-footer, #footer_widgets h2 { 
     color:#303030; 
     margin-bottom: 1px; 
@@ -176,7 +163,10 @@ h2.home-footer, #footer_widgets h2 {
     font-family: 'JosefinSansStdLight', 'Source Sans Pro', sans-serif;
     font-size: 2.3em;
 }
-
+#content article section.entry{
+    font-size: 1.2em;
+    padding-top: 50px;
+}
 
 .entry img {
     margin-bottom: -1px;
@@ -197,16 +187,6 @@ div#content.col-full section#main.col-left article.post-8994 aside.post-meta{
     display:none;
 }
 
-header h1 {
-    padding: 12px 20px 30px 190px; 
-    text-shadow:none; 
-    font-size:2.5em; 
-    font-weight:normal;
-    color:#000000; 
-    text-transform:uppercase;   
-    font-family: 'Source Sans Pro', sans-serif; 
-}
-
 .post img, .type-page img, .search-results .features img, .search-results article.page img, .search-results .type-product img, .search-results .type-portfolio img, .post img.thumbnail, .type-page img.thumbnail, .search-results .features img.thumbnail, .search-results article.page img.thumbnail, .search-results .type-product img.thumbnail, .search-results .type-portfolio img.thumbnail {
     background: none repeat scroll 0 0 padding-box transparent;
     border: 0 none;
@@ -225,8 +205,8 @@ header h1 {
 
 
 
-.page #content header h1, .single #content header h1, #store_featurette_header h1 {
-    padding: 25px 0px 10px 0px; 
+h1, #store_featurette_header h1 {
+    padding: 25px 0px 10px 215px; 
     text-shadow:none; 
     font-size: 5.0em; 
     line-height: 83px;
@@ -241,8 +221,8 @@ header h1 {
     margin:0px;
 }
 
-.page #content p, .search-results article.page #content p{
-    margin:20px 10%;
+#description p{
+ 
     font-size: 1.8em;
     font-family: 'JosefinSansStdLight', 'Source Sans Pro', sans-serif; 
 }
@@ -283,8 +263,6 @@ body #content{
 .readmore{
    
 }
-
-
 
 #designer_header a{
     color: #444;
@@ -331,7 +309,7 @@ body #content{
     padding-right: 10px;
 }
 
-html.js body.page div#wrapper.container div#content.page section#main.col-left article.post-8994 section.entry div#ourdesigners.row div.designer-wrapper div.designer div.popup p{
+.designer p{
     font-size: 1.2em;
 }
 #ourdesigners .designer .popup h2{
@@ -361,10 +339,6 @@ html.js body.page div#wrapper.container div#content.page section#main.col-left a
 #ourdesigners .designer .popup ul li{
     display: inline;
 }
-
-
-
-
 
 .filter1343 {
     display: none !important;
@@ -459,14 +433,17 @@ footer a:hover{
 /* @media queries */
 /*****************************************************************************
 /*****************************************************************************/
-@media screen and (max-width: 768px) {
-    
-    .woocommerce-page #content #main{
-        margin: 40px 0% 0px 0%;
-        width:100% !important;
-        max-width:960px;
+@media (max-width: 979px) {
+    h1{
+        padding-left: 0;
     }
-    
+}
+
+@media screen and (max-width: 768px) {
+
+    .popup{
+        width: 323px;
+    }
     .woocommerce-page #content #sidebar{
         float:left;
         color:#000;
@@ -486,7 +463,9 @@ footer a:hover{
     .page #content header{
         margin: 0px 5% 0px 7%;
     }
-    
+     h1{
+       font-size: 4em;
+    }
     .page #content{
         margin:0px;
         padding:0px;
@@ -512,18 +491,7 @@ footer a:hover{
     #ourdesigners .designer .popup p{
         line-height:15px;
     }
-    
-    #ourdesigners .designer.char{
-        background-image:url('http://staging.click3x.com/icuparis/wp-content/uploads/0000_char-209x300.png');
-    }
-    
-    #ourdesigners .designer.noot{
-        background-image:url('http://staging.click3x.com/icuparis/wp-content/uploads/0001_noot-209x300.png');
-    }
-    
-    #ourdesigners .designer.aea{
-        background-image:url('http://staging.click3x.com/icuparis/wp-content/uploads/0002_aea-209x300.png');
-    }
+        
     
     .single #content .article-inner{
         float: right;
@@ -1496,7 +1464,7 @@ div.img_shadow a{
 	-moz-box-shadow: 0 2px 3px -1px #8a8a8a;
 	-ms-box-shadow: 0 2px 3px -1px #8a8a8a;
 	-o-box-shadow: 0 2px 3px -1px #8a8a8a;*/
-	border-bottom:1px #ccc solid;
+/*	border-bottom:1px #ccc solid;*/
     display: inline-block;
     margin:5px;
     padding:10px;
