--- a/store/app/design/frontend/icu/icu/template/page/2columns-left.phtml
+++ b/store/app/design/frontend/icu/icu/template/page/2columns-left.phtml
@@ -37,7 +37,7 @@
 <body>
 <?php echo $this->getChildHtml('after_body_start') ?>
 <?php echo $this->getChildHtml('global_notices') ?>
-<!-- HEADER AND NAVIGATION SECTION -->
+<!-- oc: 2columns- left HEADER AND NAVIGATION SECTION -->
 <?php echo $this->getChildHtml('header') ?>
 <!-- /HEADER AND NAVIGATION SECTION -->
 <div class="clr"></div>
