--- a/store/app/design/frontend/icu/icu/template/page/html/head.phtml
+++ b/store/app/design/frontend/icu/icu/template/page/html/head.phtml
@@ -40,3 +40,6 @@
 <?php echo $this->getChildHtml() ?>
 <?php echo $this->helper('core/js')->getTranslatorScript() ?>
 <?php echo $this->getIncludes() ?>
+
+</script>
+<script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js"></script>
