--- a/store/app/design/frontend/icu/icu/template/page/product.phtml
+++ b/store/app/design/frontend/icu/icu/template/page/product.phtml
@@ -48,7 +48,7 @@
 <body>
 <?php echo $this->getChildHtml('after_body_start') ?>
 <?php echo $this->getChildHtml('global_notices') ?>
-<!-- HEADER AND NAVIGATION SECTION -->
+<!-- oc: product HEADER AND NAVIGATION SECTION -->
 <?php echo $this->getChildHtml('header') ?>
 <!-- /HEADER AND NAVIGATION SECTION -->
 <div class="clr"></div>
