--- a/store/app/design/frontend/icu/icu/template/page/fdesign.phtml
+++ b/store/app/design/frontend/icu/icu/template/page/fdesign.phtml
@@ -53,7 +53,7 @@ function open_image(id) {
 <body onload="open_image('designer01');">
 <?php echo $this->getChildHtml('after_body_start') ?>
 <?php echo $this->getChildHtml('global_notices') ?>
-<!-- HEADER AND NAVIGATION SECTION -->
+<!-- fdesign HEADER AND NAVIGATION SECTION -->
 <?php echo $this->getChildHtml('header') ?>
 <!-- /HEADER AND NAVIGATION SECTION -->
 <div class="clr"></div>
