--- a/store/app/design/frontend/icu/icu/template/catalog/product/list.phtml
+++ b/store/app/design/frontend/icu/icu/template/catalog/product/list.phtml
@@ -266,8 +266,8 @@
     }
     ?>
 		
-	<!-- subscribe-left -->
-		<?php echo $this->getChildHtml('subscribe_left'); ?>
+	<!-- oc: remove subscribe-left -->
+		<?php //echo $this->getChildHtml('subscribe_left'); ?>
 	<!-- /subscribe-left -->
 
 </div>
